Bug 13 - Remove scrollbar and replace with scroll buttons and overflow menus.

--- a/src/chrome/global/content/widgets/tabpreviews.css
+++ b/src/chrome/global/content/widgets/tabpreviews.css
@@ -8,11 +8,11 @@
 }
 
 .tbs-scrollbox[orient="vertical"] {
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 .tbs-scrollbox[orient="horizontal"] {
-  overflow-x: scroll;
+  overflow-x: hidden;
 }
 
 .tbs-tabpreview {
